<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/layoutNavBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBlue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutNav"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/baseline_chevron_left_black_36dp"
                android:gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="Back"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_medium"/>

            <Button
                android:id="@+id/btnChangeLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/round_shape_btn"
                android:drawableStart="@drawable/change_language_icon"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingLeft="16dp"
                android:paddingTop="2dp"
                android:paddingRight="16dp"
                android:paddingBottom="2dp"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:elevation="2dp"
                android:fontFamily="@font/montserrat_medium"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layoutNav2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutNav"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/title_rd_3"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_medium"/>

                <TextView
                    android:id="@+id/txtSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/subtitle_rd_3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:fontFamily="@font/montserrat_medium"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/reading_drills_1"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutNavBg"
        android:layout_marginTop="12dp"
        android:padding="14dp">

        <TextView
            android:id="@+id/txtDesc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_1_rd_3"
            android:textSize="12dp"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/txtDesc2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_2_rd_3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/txtDesc3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_3_rd_3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/txtDesc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_4_rd_3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/txtDesc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_5_rd_3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"/>

        <TextView
            android:id="@+id/txtDesc6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_6_rd_3"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"/>


    </LinearLayout>

</RelativeLayout>