<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:id="@+id/layoutGif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imageGif"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtGoodmorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageGif"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/good_morning"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtGoodmorning"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="Justin!"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutGif"
        android:layout_marginTop="22dp">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardLessons"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorLesson">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgLessons"
                    android:src="@drawable/lessons_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/txtLessons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/lessons"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_medium"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReadingDrills"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorReading">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgReadingDrills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/reading_drills_icon" />

                <TextView
                    android:id="@+id/txtReadingDrills"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/reading_drills"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_medium"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardQuiz"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            card_view:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/colorQuiz">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgQuiz"
                    android:src="@drawable/quiz_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/txtQuiz"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/quiz"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat_medium"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>